--- a/ran-sim/package.json
+++ b/ran-sim/package.json
@@ -10,32 +10,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "@types/leaflet": "^1.7.11",
-    "leaflet": "^1.8.0",
-    "leaflet-curve": "^1.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "~12.0.5",
+    "@angular/cdk": "^12.0.5",
+    "@angular/cdk-experimental": "^12.0.5",
+    "@angular/common": "~12.0.5",
+    "@angular/compiler": "~12.0.5",
+    "@angular/core": "~12.0.5",
+    "@angular/forms": "~12.0.5",
+    "@angular/localize": "^12.0.5",
+    "@angular/material": "^12.0.5",
+    "@angular/platform-browser": "~12.0.5",
+    "@angular/platform-browser-dynamic": "~12.0.5",
+    "@angular/router": "~12.0.5",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@kubernetes/client-node": "^0.12.2",
+    "date-fns": "^1.29.0",
+    "js-yaml": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.11",
+    "material-icons": "^0.7.3",
+    "ng2-ace-editor": "^0.3.9",
+    "raw-loader": "^4.0.2",
+    "rxjs": "~6.6.7",
+    "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.3",
-    "@angular/cli": "~14.0.3",
-    "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
+    "@angular-devkit/build-angular": "~12.0.5",
+    "@angular/cli": "~12.0.5",
+    "@angular/compiler-cli": "~12.0.5",
+    "@angular/language-service": "~12.0.5",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/node": "^12.20.15",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.4",
+    "cypress": "^7.5.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "prettier": "^2.3.1",
+    "protractor": "~7.0.0",
+    "ts-node": "^10.4.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.2.4"
   }
 }
